## SPDX-License-Identifier: BSD-3-Clause
##
## Copyright (c) 2017-2021, Intel Corporation

pkginclude_HEADERS =		\
	addr_info.h		\
	export.h		\
	id_manager.h		\
	network_monitor.h	\
	path_manager.h		\
	plugin.h		\
	types.h


noinst_HEADERS =		\
	config-private.h	\
	id_manager_private.h	\
	mptcp_private.h		\
	path_manager_private.h 	\
	plugin_private.h	\
	sockaddr_private.h
