## SPDX-License-Identifier: BSD-3-Clause
##
## Copyright (c) 2017-2021, Intel Corporation

pkginclude_HEADERS =		\
	addr_info.h		\
	export.h		\
	id_manager.h		\
	network_monitor.h	\
	path_manager.h		\
	plugin.h		\
	types.h


noinst_HEADERS =		\
	private/config.h	\
	private/id_manager.h	\
	mptcp_private.h		\
	private/path_manager.h 	\
	private/plugin.h	\
	private/sockaddr.h
