## SPDX-License-Identifier: BSD-3-Clause
##
## Copyright (c) 2017-2021, Intel Corporation

pkginclude_HEADERS =		\
	addr_info.h		\
	export.h		\
	id_manager.h		\
	network_monitor.h	\
	path_manager.h		\
	plugin.h		\
	types.h

noinst_HEADERS =			\
	private/addr_info.h		\
	private/config.h		\
	private/configuration.h		\
	private/id_manager.h		\
	private/mptcp_org.h		\
	private/mptcp_upstream.h	\
	private/netlink_pm.h		\
	private/path_manager.h 		\
	private/plugin.h		\
	private/sockaddr.h
